src/desugar/snapshots/transmute__desugar__implicit_ret_converter__tests__explicit_return.snap
---
source: src/desugar/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  ret 42;
}

