src/desugar/snapshots/transmute__desugar__implicit_ret_converter__tests__implicit_return_if.snap
---
source: src/desugar/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  if c {
    42;
  }
  ret 43;
}

