src/desugar/snapshots/transmute__desugar__implicit_ret_converter__tests__implicit_return_simple.snap
---
source: src/desugar/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  41;
  ret 42;
}

