src/desugar/snapshots/transmute__desugar__implicit_ret_converter__tests__implicit_return_struct.snap
---
source: src/desugar/implicit_ret_converter.rs
expression: w
---
struct S {
  x: number,
  y: number,
}
let f(): number = {
  ret S {x: if true {
    ret 1;
  }, y: 1,};
}

